--- a/assets/letters/Evil.html
+++ b/assets/letters/Evil.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="letter.css">
 </head>
 <body>
-    <img src="/assets/scanned vitamins/evil.jpg"/>
+    <img src="../scanned vitamins/evil.jpg"/>
     <p>“Remember the angels who did not stay within the limits of their proper 
 authority, but abandoned their own dwelling place: God has kept them in 
 the darkness below, bound in eternal chains for that great Day on which 
