--- a/assets/letters/Faith.html
+++ b/assets/letters/Faith.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="letter.css">
 </head>
 <body>
-    <img src="/assets/scanned vitamins/faith.jpg"/>
+    <img src="../scanned vitamins/faith.jpg"/>
     <p class="title">The Fellowship of Faith</p>
     <p>Chapter 11 of the book of Hebrews contains a record of all the faithful of God who believed the Lord's Promises but had not received the Promises at their death. <a href="#">Hebrews 12:2</a> calls us to "Keep our eyes fixed on Jesus, on whom our faith depends, from beginning to end."</p>
     <p>What exactly is this FAITH that we are called to focus upon?</p>
