--- a/assets/letters/Forgiveness.html
+++ b/assets/letters/Forgiveness.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="letter.css">
 </head>
 <body>
-    <img src="/assets/scanned vitamins/forgiveness.jpg"/>
+    <img src="../scanned vitamins/forgiveness.jpg"/>
     <p class="title">“Forgiveness is to be set loose from sin.”</p> 
     <p>The above is a quote by G. Campbell Morgan and states a perfect 
        definition of the process of making our thoughts, actions or resentments 
