--- a/assets/letters/Grace.html
+++ b/assets/letters/Grace.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="letter.css">
 </head>
 <body>
-    <img src="/assets/scanned vitamins/grace.jpg"/>
+    <img src="../scanned vitamins/grace.jpg"/>
     <p class="title">God's Gift of Grace</p>
     <p><a href="#">John 1:14</a> "And the WORD became flesh, and dwelt among us, and we beheld His glory, glory as of the only begotten from the Father, full of grace and truth."</p>
     <p>How much do you understand about God’s gift of GRACE?  I knew very little about grace. The Greek word for grace is <i>charin</i> which means benevolence or undeserved favor.</p> 
