--- a/assets/letters/Happiness.html
+++ b/assets/letters/Happiness.html
@@ -12,7 +12,7 @@
     
 </head>
 <body>
-    <img src="/assets/scanned vitamins/happiness.jpg"/>
+    <img src="../scanned vitamins/happiness.jpg"/>
     <p><a href="#">Revelation 1:3</a> - "Blessed (Happy) is he who reads and those who hear the words of the prophecy and heeds the things that are written in it for the time is near."</p>
         <p>As the family of Noah left the ark we learn the names of his three sons. They were Shem, Ham, and Japheth. In <a href="#">Genesis 9:20</a> we learn that Noah began farming and planted a vineyard. He drank too much wine and passed out. During this event his son, Ham, sinned and was cursed while Shem and Japheth remained righteous. Sin again entered the world and the sons went to live in different areas of the land.</p>
         <p>Now you would think that the sons had seen God's miracles and been taught by a righteous father about respecting God giving them a desire to worship God and not sin against Him. But sin grew in the hearts of the sons progeny and sin was once more a problem on the earth.</p>
