--- a/assets/letters/Hope.html
+++ b/assets/letters/Hope.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="letter.css">
 </head>
 <body>
-    <img src="/assets/scanned vitamins/hope.png"/>
+    <img src="../scanned vitamins/hope.png"/>
     <p class="title">Christ in you --- The Hope of Glory</p>
     <p><a href="#">COLOSSIANS 1:27</a> “To them GOD willed to make known what are the riches of 
     the glory of this mystery among the Gentiles which is Christ in you, the Hope of
