--- a/assets/letters/Letters.html
+++ b/assets/letters/Letters.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="letter.css">
 </head>
 <body>
-    <img src="/assets/scanned vitamins/letters.jpg"/>
+    <img src="../scanned vitamins/letters.jpg"/>
     <p><a href="#">Deuteronomy 7:9</a>  “Know therefore that the Lord your God; He is God, the faithful 
         God, who keeps His covenant and His lovingkindness to the 1000th generation 
         with those who love Him and keep His commandments.”</p>
