--- a/assets/letters/Obey.html
+++ b/assets/letters/Obey.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="letter.css">
 </head>
 <body>
-    <img src="/assets/scanned vitamins/obey.jpg"/>
+    <img src="../scanned vitamins/obey.jpg"/>
     <p class="title">Obedience to the Lord</p>
     <p><a href="#">1 Samuel 15:22</a> "Has the Lord as much delight in burnt offerings and sacrifices as in obeying the voice of the Lord?  Behold, to obey is better than sacrifice, and to heed better than the fat of rams.”</p>
     <p>We begin this study on obedience with the Old Testament command.  The reference to burnt offerings and sacrifices is comparable to our current worship services.  The Lord is communicating that obedience to Him is better than our worship of Him.</p>
