--- a/assets/letters/Pray.html
+++ b/assets/letters/Pray.html
@@ -12,7 +12,7 @@
     
 </head>
 <body>
-    <img src="/assets/scanned vitamins/pray.jpg"/>
+    <img src="../scanned vitamins/pray.jpg"/>
     <p><a href="#">Matthew 6:9-13</a> and <a href="#">Luke 11:1-4</a></p>
     <p>One day Jesus was praying in a certain place. When He finished, one of His 
         disciples said to Him, “Lord, teach us to pray, just as John taught his disciples.” 
