--- a/assets/letters/Promise.html
+++ b/assets/letters/Promise.html
@@ -12,7 +12,7 @@
     
 </head>
 <body>
-    <img src="/assets/scanned vitamins/promise.jpg"/>
+    <img src="../scanned vitamins/promise.jpg"/>
     <p>In <a href="#">Ezekiel 1:28</a>, the Prophet describes his vision of God. 
         "As the appearance of the rainbow in the clouds on a rainy day, so was 
         the appearance of the surrounding radiance. Such was the appearance 
