--- a/assets/letters/Resurrection.html
+++ b/assets/letters/Resurrection.html
@@ -12,7 +12,7 @@
     
 </head>
 <body>
-    <img src="/assets/scanned vitamins/resurrection.jpg"/>
+    <img src="../scanned vitamins/resurrection.jpg"/>
     <p class="title">Royal Resurrection</p>
     <p><a href="#">Job 19:25</a> “As for me, I know that my Redeemer lives, and at the last He will take His stand on earth.  Even after my skin is destroyed, yet from my flesh I shall see God, whom I myself shall behold, and whom my eyes will see and not another. My heart faints within me!</p>
     <p>The book of Job is reported to be one of, if not the very earliest book written in the Bible. The verse above is the most quoted in the book of Job. The word Redeemer has the translation of Vindicator, Defender, or Kinsman. That is what Jesus Christ is for us. Jesus, our brother, friend and Savior. Jesus was committed to be our Savior from His birth to death.</p>
