--- a/assets/letters/Rewards.html
+++ b/assets/letters/Rewards.html
@@ -12,7 +12,7 @@
     
 </head>
 <body>
-    <img src="/assets/scanned vitamins/rewards.jpg"/>
+    <img src="../scanned vitamins/rewards.jpg"/>
     <p class="title">Crowns of Rewards</p>
     <p>Jesus said, "Behold, I am coming quickly, and My revvard is with Me to render to every nan according to what he has done." <a href="#">Revelation 22:12</a></p>
     <p>Last month my message to you was about Heaven. I hope you enjoyed reading the letter and perhaps learned some new facts about heaven. Today I want to encourage you with the good news of two things. First, by accepting the free gift of salvation and faith in Jesus Christ your earn the joy of living eternally in heaven after this life. Second, you earn a reward for running the good race here on earth that God has planned for you. The Biblical word for Crown is wreath. This is like the rewards in Rome that men running a race won for being the winner.</p>
