--- a/assets/letters/Spirit.html
+++ b/assets/letters/Spirit.html
@@ -12,7 +12,7 @@
     
 </head>
 <body>
-    <img src="/assets/scanned vitamins/spirit.jpg"/>
+    <img src="../scanned vitamins/spirit.jpg"/>
     <p><a href="#">Psalm 104:30</a> “You, Lord, send forth Your Spirit, they (people) are 
         created; And You renew the face of the earth.”</p>
         <p>Since March blows in on the wind, Tim suggested I write about the third person 
