--- a/assets/letters/Study.html
+++ b/assets/letters/Study.html
@@ -12,7 +12,7 @@
     
 </head>
 <body>
-    <img src="/assets/scanned vitamins/study.jpg"/>
+    <img src="../scanned vitamins/study.jpg"/>
     <p>“For what was written in earlier times was written for our 
         instruction, that through perseverance and the encouragement of 
         the Scripture we might have hope.” <a href="#">Romans 15:4</a></p> 
