--- a/assets/letters/Sword.html
+++ b/assets/letters/Sword.html
@@ -12,7 +12,7 @@
     
 </head>
 <body>
-    <img src="/assets/scanned vitamins/sword.jpg"/>
+    <img src="../scanned vitamins/sword.jpg"/>
     <p>This month’s topic is the Sword of the Spirit which the Bible 
         identifies as the Word of God. The Sword of the Spirit is one component 
         of our defense against evil and Satan’s attacks. This defense is called 
