--- a/assets/letters/Think.html
+++ b/assets/letters/Think.html
@@ -12,7 +12,7 @@
     
 </head>
 <body>
-    <img src="/assets/scanned vitamins/think.jpg"/>
+    <img src="../scanned vitamins/think.jpg"/>
     <p><a href="#">Philippians 4:8-9</a> “In conclusion, my brothers, fill your minds with those things that are 
         good and deserve praise: things that are true, noble, right, pure, lovely, and honorable. 
         Put into practice what you learned and received from me, both from my words and from 
