--- a/assets/letters/Time.html
+++ b/assets/letters/Time.html
@@ -12,7 +12,7 @@
     
 </head>
 <body>
-    <img src="/assets/scanned vitamins/time.jpg"/>
+    <img src="../scanned vitamins/time.jpg"/>
     <p>“We glide along the tides of time as swiftly as a dashing river and 
         then vanish as quickly as a dream.” <a href="#">Psalm 90:5</a> (Living Bible) 
         <p>As I was deciding how to begin this new year, many topics floated 
