--- a/assets/letters/Wisdom.html
+++ b/assets/letters/Wisdom.html
@@ -12,7 +12,7 @@
     
 </head>
 <body>
-    <img src="/assets/scanned vitamins/wisdom.jpg"/>
+    <img src="../scanned vitamins/wisdom.jpg"/>
     <p class="title">Wisdom From Above</p>
     <p><a href="#">Proverbs 2:6,7</a>  For the Lord gives wisdom; from His mouth comes knowledge and understanding.  He stores up sound wisdom for the upright; He is a shield to those who walk in integrity.”</p>
     <p>WHY HAVE WISDOM?  The above verse establishes the truth of Biblical Wisdom. Christians believe that God is the giver of all good gifts.  Wisdom is certainly a wonderful and useful gift from our loving God and we should be very thankful for His shield of knowledge and wisdom.</p>
