--- a/assets/letters/Worship.html
+++ b/assets/letters/Worship.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="letter.css">
 </head>
 <body>
-    <img src="/assets/scanned vitamins/worship.jpg"/>
+    <img src="../scanned vitamins/worship.jpg"/>
     <p class="title">Worship the Lord</p>
     <p><a href="#">2 CHRONICLES 29:28</a> - While the whole assembly worshiped, the singers also sang and the trumpets sounded, all this continued until the burnt offering was finished.</p>
     <p>Noah and his family were in the Ark 377 days. Nearly 54 weeks. They were all safe, and all the animals were safe. I bet there were many days when Noah and his family were frightened of the lightning, thunder and bored with the constant sound of the rain on the roof of the Ark. They had no place to turn except to place their trust in God. Have you ever felt frustration or fear and knew that the events were out of your hands? lf you have, remember you can trust God. He is trustworthy!</p>
