--- a/assets/letters/kidsObey.html
+++ b/assets/letters/kidsObey.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="letter.css">
 </head>
 <body>
-    <img src="/assets/scanned vitamins/obey.jpg"/>
+    <img src="../scanned vitamins/obey.jpg"/>
     <p class="title">Children Obey the Lord</p>
     <p><a href="#">Ephesians 6:1</a> "Children obey your parents in the Lord, for this is right.  Honor your father and your mother (which is the first commandment with a promise), so that you may live long on the earth.”</p>
     <p>This is a very important command from God to all children.  The promise is that when you obey your mother and father, who love you very much, you will be kept as safe a possible by what they tell you to do and what not to do.  Obedience by you will result in a long, safe, fun life.</p>
