--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                     <a class="normal-links" href="#" data-name="Wisdom">Wisdom from Above</a>
                     <a class="bonus" href="#" data-name="Resurrection"><i>Bonus Vitamin</i> - Royal Resurrection</a>
                     <a class="normal-links" href="#" data-name="Obey">Obedience to God</a>
+                    <a class="normal-links" href="#" data-name="Prayer">The Lord's Prayer</a>
                 </div>
                 <div class="title">Spiritual Vitamins</div>
                 <div class="letter-container">
@@ -94,8 +95,9 @@
                 
             </div>
             </nav>
-            <footer class="footer">Scroll the latest news here...</footer>
+            <div class="bonus-vitamin" id="bonus-vitamin" onclick="openBonus()"><i>click for<br>"Bonus Vitamin"</i></div>
     </div>
+    
     <script src="content.js"></script>
     <script src="script.js"></script>
 </body>
