--- a/assets/letters/Noah_2.html
+++ b/assets/letters/Noah_2.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="letter.css">
 </head>
 <body>
-    <img src="/assets/scanned vitamins/noah2.jpg"/>
+    <img src="../scanned vitamins/noah2.jpg"/>
     <p><a href="#">2 CHRONICLES 29:28</a> - While the whole assembly worshiped, the singers also sang and the trumpets sounded, all this continued until the burnt offering was finished.</p>
     <p>Noah and his family were in the Ark 377 days. Nearly 54 weeks. They were all safe, and all the animals were safe. I bet there were many days when Noah and his family were frightened of the lightning, thunder and bored with the constant sound of the rain on the roof of the Ark. They had no place to turn except to place their trust in God. Have you ever felt frustration or fear and knew that the events were out of your hands? lf you have, remember you can trust God. He is trustworthy!</p>
     <p>After the land had dried and the flood had disappeared God opened the door and instructed Noah to release all the animals and leave the Ark with his family. We read in <a href="#">Genesis 9:1</a> that God blessed Noah and his sons and said to them, "Be fruitful and multiply, and fill the earth." Then God repeated His Covenant with Noah and his sons and promised never to flood the earth again. He also gave them permission to include animals as part of their diet. For the first time God called out the sons by name. They were Shem, Ham, and Japheth, and they would populate the whole  earth. They must have felt happy and free again.</p>
