--- a/assets/letters/Thankful.html
+++ b/assets/letters/Thankful.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="letter.css">
 </head>
 <body>
-    <img src="/assets/scanned vitamins/thankful.jpg"/>
+    <img src="../scanned vitamins/thankful.jpg"/>
     <p><a href="#">Psalm 100: 3-4</a></p>
     <p>Know that the LORD Himself is GOD, It is He who has made us, and not we ourselves; We are 
         His people and the sheep of His pastures .... Give thanks to Him and bless His name, for the 
