--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <a class="bonus" href="#" data-name="Resurrection"><i>Bonus Vitamin</i> - Royal Resurrection</a>
                     <a class="normal-links" href="#" data-name="Obey">Obedience to God</a>
                     <a class="normal-links" href="#" data-name="Prayer">The Lord's Prayer</a>
-                    <a class="normal-links" href="#" data-name="Patriotic">One Nation Under God</a>
+                    <a class="normal-links" href="#" data-name="Patriotic" data-daysArray="patrioticDaysArray">One Nation Under God</a>
                 </div>
                 <div class="title">Spiritual Vitamins</div>
                 <div class="letter-container">
