--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                     <a class="normal-links" href="#" data-name="Obey">Obedience to God</a>
                     <a class="normal-links" href="#" data-name="Prayer">The Lord's Prayer</a>
                     <a class="normal-links" href="#" data-name="Patriotic" data-daysArray="patrioticDaysArray">One Nation Under God</a>
+                    <a class="normal-links" href="#" data-name="Reborn">Born Again</a>
                 </div>
                 <div class="title">Spiritual Vitamins</div>
                 <div class="letter-container">
