--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
                     <a class="normal-links" href="#" data-name="Patriotic" data-daysArray="patrioticDaysArray">One Nation Under God</a>
                     <a class="normal-links" href="#" data-name="Reborn">Born Again</a>
                     <a class="normal-links" href="#" data-name="Promises">Promises</a>
+                    <a class="normal-links" href="#" data-name="Satan">Evil Enemy</a>
+                    <a class="normal-links" href="#" data-name="Harvest">Harvest</a>
                 </div>
                 <div class="title">Spiritual Vitamins</div>
                 <div class="letter-container">
