added Immanuel vitamin

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                     <a class="normal-links" href="#" data-name="Promises">Promises</a>
                     <a class="normal-links" href="#" data-name="Satan">Evil Enemy</a>
                     <a class="normal-links" href="#" data-name="Harvest">Harvest</a>
+                    <a class="normal-links" href="#" data-name="Immanuel">Immanuel</a>
                 </div>
                 <div class="title">Spiritual Vitamins</div>
                 <div class="letter-container">
