added content and img for great beginnings

--- a/assets/letters/Beginnings.html
+++ b/assets/letters/Beginnings.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Beginnings</title>
+    <title>Great Beginnings</title>
     <link rel="stylesheet" href="letter.css">
 </head>
 <body>
     <img src="../scanned vitamins/beginnings.jpg"/>
-    <p class="title">“New Beginnings”</p> 
+    <p class="title">“Great Beginnings”</p> 
     <p>“In the Beginning God created the Heavens and the Earth.”  <a href="#">Genesis 1:1</a></p>
     <p>Everything we know and understand has a beginning.  Creation in every form, the sun, moon, and stars.  Our human beginning was Adam and Eve and everyone who has a birthday has a beginning.  We have seasons, years, months, weeks and days and even minutes. God’s plan has purpose, organization, and a perfect design.  We have holidays and celebrations to remind us of new beginnings.  What is your favorite “new beginning”?</p> 
     <p>Jesus Christ, God’s Son is the only unique human ever born.  Jesus had no beginning and was with God and the Spirit at Creation.  (<a href="#">Genesis 1:26</a>) “Let us make man in our image, according to our likeness.” </p>       
