--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                     <a class="normal-links" href="#" data-name="Satan">Evil Enemy</a>
                     <a class="normal-links" href="#" data-name="Harvest">Harvest</a>
                     <a class="normal-links" href="#" data-name="Immanuel">Immanuel</a>
+                    <a class="normal-links" href="#" data-name="Beginnings">Great Beginnings</a>
                 </div>
                 <div class="title">Spiritual Vitamins</div>
                 <div class="letter-container">
