added book vitamins

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                     <a class="normal-links" href="#" data-name="Harvest">Harvest</a>
                     <a class="normal-links" href="#" data-name="Immanuel">Immanuel</a>
                     <a class="normal-links" href="#" data-name="Beginnings">Great Beginnings</a>
+                    <a class="normal-links" href="#" data-name="Book">Book of Love Letters</a>
                 </div>
                 <div class="title">Spiritual Vitamins</div>
                 <div class="letter-container">
