--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                     <a class="normal-links" href="#" data-name="Beginnings">Great Beginnings</a>
                     <a class="normal-links" href="#" data-name="Book">Book of Love Letters</a>
                     <a class="normal-links" href="#" data-name="Pride">Pride</a>
+                    <a class="normal-links" href="#" data-name="Holy">Holy Lord</a>
                 </div>
                 <div class="title">Spiritual Vitamins</div>
                 <div class="letter-container">
