corrected holy letter

--- a/assets/letters/Holy.html
+++ b/assets/letters/Holy.html
@@ -58,7 +58,7 @@
         created is provided in His holiness for believers. Faith in the "Holy One" is
         our key to living a holy life. Holiness is much to be desired!
         </p>
-    <p>Psalm 11:4 The Lord is in His holy temple, the Lord's throne is in heaven.</p>
+    <p><a href="#">Psalm 11:4</a> The Lord is in His holy temple, the Lord's throne is in heaven.</p>
     <p>Note: On day 3 of the accompanying vitamins, I quote Cyprian, who lived
         from 210 to 258. He was the Bishop of Carthage and an early church
         writer.
