--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                     <a class="normal-links" href="#" data-name="Book">Book of Love Letters</a>
                     <a class="normal-links" href="#" data-name="Pride">Pride</a>
                     <a class="normal-links" href="#" data-name="Holy">Holy Lord</a>
+                    <a class="normal-links" href="#" data-name="Grief">Grief</a>
                 </div>
                 <div class="title">Spiritual Vitamins</div>
                 <div class="letter-container">
