--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                     <a class="normal-links" href="#" data-name="Pride">Pride</a>
                     <a class="normal-links" href="#" data-name="Holy">Holy Lord</a>
                     <a class="normal-links" href="#" data-name="Grief">Grief</a>
+                    <a class="normal-links" href="#" data-name="Angels">Angels</a>
                 </div>
                 <div class="title">Spiritual Vitamins</div>
                 <div class="letter-container">
