--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                     <a class="normal-links" href="#" data-name="Holy">Holy Lord</a>
                     <a class="normal-links" href="#" data-name="Grief">Grief</a>
                     <a class="normal-links" href="#" data-name="Angels">Angels</a>
+                    <a class="normal-links" href="#" data-name="Love_">Love</a>
                 </div>
                 <div class="title">Spiritual Vitamins</div>
                 <div class="letter-container">
