--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                     <a class="normal-links" href="#" data-name="Grief">Grief</a>
                     <a class="normal-links" href="#" data-name="Angels">Angels</a>
                     <a class="normal-links" href="#" data-name="Love_">Love</a>
+                    <a class="normal-links" href="#" data-name="Mystery">Mystery</a>
                 </div>
                 <div class="title">Spiritual Vitamins</div>
                 <div class="letter-container">
