added Resurrection vitamin

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                     <a class="normal-links" href="#" data-name="Angels">Angels</a>
                     <a class="normal-links" href="#" data-name="Love_">Love</a>
                     <a class="normal-links" href="#" data-name="Mystery">Mystery</a>
+                    <a class="normal-links" href="#" data-name="Resurrection_">The Resurrection</a>
                 </div>
                 <div class="title">Spiritual Vitamins</div>
                 <div class="letter-container">
