added Thankful and Joy vitamins

--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
                     <a class="normal-links" href="#" data-name="Pride">Pride</a>
                     <a class="normal-links" href="#" data-name="Holy">Holy Lord</a>
                     <a class="normal-links" href="#" data-name="Grief">Grief</a>
+                    <!-- <a class="normal-links" href="#" data-name="Purity">Purity</a> -->
+                    <a class="normal-links" href="#" data-name="Thankful_">Thankful</a>
+                    <a class="normal-links" href="#" data-name="Joy">Joy</a>
                     <a class="normal-links" href="#" data-name="Angels">Angels</a>
                     <a class="normal-links" href="#" data-name="Love_">Love</a>
                     <a class="normal-links" href="#" data-name="Mystery">Mystery</a>
