--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                     <a class="normal-links" href="#" data-name="Love_">Love</a>
                     <a class="normal-links" href="#" data-name="Mystery">Mystery</a>
                     <a class="normal-links" href="#" data-name="Resurrection_">The Resurrection</a>
+                    <a class="normal-links" href="#" data-name="Victory">Victory</a>
                 </div>
                 <div class="title">Spiritual Vitamins</div>
                 <div class="letter-container">
