--- a/assets/letters/Resurrection_.html
+++ b/assets/letters/Resurrection_.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <img src="../scanned vitamins/resurrection_.jpg" />
-    <p class="title">April 2024 - The Resurrection</p>
+    <p class="title">Easter 2024 - The Resurrection</p>
     <p>
       <a href="#">Job 19:25</a> "I know that my Redeemer lives, and at the last
       He will take His stand on the earth."
