--- a/assets/letters/Victory.html
+++ b/assets/letters/Victory.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <img src="../scanned vitamins/victory.jpg" />
-    <p class="title">May 2024 - Victory</p>
+    <p class="title">Spring 2024 - Victory</p>
     <p>"The first way to Victory is to recognize the enemy." Corrie Ten Boom</p>
     <p>
       Dr. David Jeremiah, Pastor of Shadow Mountain Baptist Church in San Diego,
