--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
                     <a class="normal-links" href="#" data-name="Mystery">Mystery</a>
                     <a class="normal-links" href="#" data-name="Resurrection_">The Resurrection</a>
                     <a class="normal-links" href="#" data-name="Victory">Victory</a>
+                    <a class="normal-links" href="#" data-name="Churches">The Seven Churches</a>
+                    <a class="normal-links" href="#" data-name="I_AM">I AM</a>
                 </div>
                 <div class="title">Spiritual Vitamins</div>
                 <div class="letter-container">
