--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                     <a class="normal-links" href="#" data-name="Churches">The Seven Churches</a>
                     <a class="normal-links" href="#" data-name="I_AM">I AM</a>
                     <a class="normal-links" href="#" data-name="Hope_">Hope</a>
+                    <a class="normal-links" href="#" data-name="Faith_">Faith</a>
                 </div>
                 <div class="title">Spiritual Vitamins</div>
                 <div class="letter-container">
