--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                     <a class="normal-links" href="#" data-name="I_AM">I AM</a>
                     <a class="normal-links" href="#" data-name="Hope_">Hope</a>
                     <a class="normal-links" href="#" data-name="Faith_">Faith</a>
+                    <a class="normal-links" href="#" data-name="Hate">God's Message About Hate</a>
                 </div>
                 <div class="title">Spiritual Vitamins</div>
                 <div class="letter-container">
