added God's Grace Vitamin

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                     <a class="normal-links" href="#" data-name="Faith_">Faith</a>
                     <a class="normal-links" href="#" data-name="Hate">God's Message About Hate</a>
                     <a class="normal-links" href="#" data-name="Compassion">Compassion</a>
+                    <a class="normal-links" href="#" data-name="Grace_">God's Grace</a>
                 </div>
                 <div class="title">Spiritual Vitamins</div>
                 <div class="letter-container">
