added seedtime and fixed css for day select

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                     <a class="normal-links" href="#" data-name="Hate">God's Message About Hate</a>
                     <a class="normal-links" href="#" data-name="Compassion">Compassion</a>
                     <a class="normal-links" href="#" data-name="Grace_">God's Grace</a>
+                    <a class="normal-links" href="#" data-name="Seedtime">Seedtime and Harvest</a>
                 </div>
                 <div class="title">Spiritual Vitamins</div>
                 <div class="letter-container">
